[workspace]
members = [
    "support",
    "basic",
    "isometric",
    "runtime_editing",
    "autotiling",
    "animated_tiles",
    "layered_map",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18" }
saddle-world-tilemap = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
