[workspace]
members = [
    "support",
    "basic",
    "isometric",
    "hex_strategy",
    "roguelike_showcase",
    "runtime_editing",
    "autotiling",
    "animated_tiles",
    "layered_map",
    "rpg_village",
    "platformer",
    "tile_painter",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18" }
saddle-world-tilemap = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-world-hex-grid = { git = "https://github.com/julien-blanchon/saddle-world-hex-grid" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"

[patch."https://github.com/julien-blanchon/saddle-world-fog-of-war"]
saddle-world-fog-of-war = { path = "../../saddle-world-fog-of-war" }
