[package]
name = "saddle-world-tilemap-example-basic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-world-tilemap = { workspace = true }
saddle-pane = { workspace = true }
saddle-world-tilemap-example-support = { path = "../support" }

[lints]
workspace = true
