[package]
name = "saddle-world-tilemap-example-hex-strategy"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-pane = { workspace = true }
saddle-world-hex-grid = { workspace = true }
saddle-world-tilemap = { workspace = true }
saddle-world-tilemap-example-support = { path = "../support" }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
